results/scraper/box64/648
inlining failed in call to ‘always_inline’ ‘_mm_aesdeclast_si128’: target specific option mismatch
Hi,

I tried to build `tests/test18.c` with `gcc` on Debian unstable and got this:

```
/usr/lib/gcc/x86_64-linux-gnu/12/include/wmmintrin.h: In function 'main':
/usr/lib/gcc/x86_64-linux-gnu/12/include/wmmintrin.h:52:1: error: inlining failed in call to 'always_inline' '_mm_aesdeclast_si128': target specific option mismatch
   52 | _mm_aesdeclast_si128 (__m128i __X, __m128i __Y)
      | ^~~~~~~~~~~~~~~~~~~~
96bf73b3.c:33:37: note: called from here
   33 |             mm128i declast = { .m = _mm_aesdeclast_si128(x.m, y.m) };
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/12/include/wmmintrin.h:44:1: error: inlining failed in call to 'always_inline' '_mm_aesdec_si128': target specific option mismatch
   44 | _mm_aesdec_si128 (__m128i __X, __m128i __Y)
      | ^~~~~~~~~~~~~~~~
96bf73b3.c:32:33: note: called from here
   32 |             mm128i dec = { .m = _mm_aesdec_si128(x.m, y.m) };
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/12/include/wmmintrin.h:69:1: error: inlining failed in call to 'always_inline' '_mm_aesenclast_si128': target specific option mismatch
   69 | _mm_aesenclast_si128 (__m128i __X, __m128i __Y)
      | ^~~~~~~~~~~~~~~~~~~~
96bf73b3.c:31:37: note: called from here
   31 |             mm128i enclast = { .m = _mm_aesenclast_si128(x.m, y.m) };
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/12/include/wmmintrin.h:61:1: error: inlining failed in call to 'always_inline' '_mm_aesenc_si128': target specific option mismatch
   61 | _mm_aesenc_si128 (__m128i __X, __m128i __Y)
      | ^~~~~~~~~~~~~~~~
96bf73b3.c:30:33: note: called from here
   30 |             mm128i enc = { .m = _mm_aesenc_si128(x.m, y.m) };
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/12/include/wmmintrin.h:77:1: error: inlining failed in call to 'always_inline' '_mm_aesimc_si128': target specific option mismatch
   77 | _mm_aesimc_si128 (__m128i __X)
      | ^~~~~~~~~~~~~~~~
96bf73b3.c:57:29: note: called from here
   57 |         mm128i imc = { .m = _mm_aesimc_si128(x.m) };
      |                             ^~~~~~~~~~~~~~~~~~~~~
```

How can I produce the amd64 test binaries myself?